adding user dashboard wireframe

--- a/src/dashboard.html
+++ b/src/dashboard.html
@@ -10,7 +10,25 @@
 </head>
 
 <body>
+  <header>
+    <h1>Street Beat</h1>
+  </header>
+  <nav>
+    <ul id="navbar">
+      <li class="nav-item"><a href="#home">home</a></li>
+      <li class="nav-item"><a href="#settings">settings</a></li>
+    </ul>
+  </nav>
+  <main>
+    <h2>Band dashboard</h2>
+    <section class="band-list-container">
+      <ul id="band-list">
+        <li><a href="#FlyBy">Fly By Brass Band</a></li>
+        <li><a href="#Boycott">Boycott</a></li>
+        <li><a href="#SoH">School of HONK</a></li>
+      </ul>
 
+  </main>
 </body>
 
 </html>
