--- a/src/index.html
+++ b/src/index.html
@@ -33,3 +33,92 @@
 </body>
 
 </html>
+
+<!-- Band homepage example -->
+
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" type="text/css" href="main.css">
+  <title>Band dashboard</title>
+</head>
+
+<body>
+  <header>
+    <h1>Street Beat</h1>
+  </header>
+  <nav>
+    <ul id="navbar">
+      <li class="nav-item"><a href="#home">dashboard</a></li>
+      <li class="nav-item"><a href="#settings">settings</a></li>
+    </ul>
+  </nav>
+  <main>
+    <h2>Fly By Brass Band</h2>
+    <section id="set-list-container">
+
+    </section>
+    <section id="repertoire-container">
+
+    </section>
+    <section id="members-container">
+
+    </section>
+    <section id="media-container">
+
+    </section>
+    <footer>
+      <!-- use favicons for social media options -->
+      <ul id="social-media-list">
+        <li class="media-item"><a href="http://www.facebook.com/flybybrassband">Facebook</a></li>
+        <li class="media-item"><a href="#">Website</a></li>
+        <li class="media-item"><a href="http://www.instagram.com/wiffleballhero">Instagram</a></li>
+        <li class="media-item"><a href="http://www.gig-o-matic.com">Gig-o</a></li>
+        <li class="media-item"><a href="#">Google Calendar</a></li>
+      </ul>
+    </footer>
+  </main>
+</body>
+
+</html>
+
+<!-- User dashboard -->
+
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" type="text/css" href="main.css">
+  <title>User band dashboard</title>
+</head>
+
+<body>
+  <header>
+    <h1>Street Beat</h1>
+  </header>
+  <nav>
+    <ul id="navbar">
+      <li class="nav-item"><a href="#home">dashboard</a></li>
+      <li class="nav-item"><a href="#settings">settings</a></li>
+    </ul>
+  </nav>
+  <main>
+    <h2>Band dashboard</h2>
+    <section class="band-list-container">
+      <ul id="band-list">
+        <li><a href="#FlyBy">Fly By Brass Band</a></li>
+        <li><a href="#Boycott">Boycott</a></li>
+        <li><a href="#SoH">School of HONK</a></li>
+      </ul>
+    </section>
+  </main>
+</body>
+
+</html>
