adding band homepage example, cleaning up css

--- a/src/band-landing.html
+++ b/src/band-landing.html
@@ -6,11 +6,47 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" type="text/css" href="main.css">
-  <title>Band homepage</title>
+  <title>Band dashboard</title>
 </head>
 
 <body>
+  <header>
+    <h1>Street Beat</h1>
+  </header>
+  <nav>
+    <ul id="navbar">
+      <li class="nav-item"><a href="#home">Dashboard</a></li>
+      <li class="nav-item"><a href="#settings">Set lists</a></li>
+      <li class="nav-item"><a href="#settings">Members</a></li>
+      <li class="nav-item"><a href="#settings">Media</a></li>
+      <li class="nav-item"><a href="#settings">Repertoire</a></li>
+    </ul>
+  </nav>
+  <main>
+    <h2>Fly By Brass Band</h2>
+    <section id="welcome">
+      <p>Fly By has a gig coming up next week! We'll
+        be running through the set list at practice tomorrow;
+        take a look at the set list posted here and let
+        Matt know if you have questions ahead of time, as he is
+        gig captain for the gig.
+        Also, we don't have any good quality images, so check
+        this gem out from the good old days of Boycott!
+      </p>
+      <img id="boycott-img" src="boycotthartford.jpg" />
+    </section>
 
+    <footer>
+      <!-- use favicons for social media options -->
+      <ul id="social-media-list">
+        <li class="media-item"><a href="http://www.facebook.com/flybybrassband">Facebook</a></li>
+        <li class="media-item"><a href="#">Website</a></li>
+        <li class="media-item"><a href="http://www.instagram.com/wiffleballhero">Instagram</a></li>
+        <li class="media-item"><a href="http://www.gig-o-matic.com">Gig-o</a></li>
+        <li class="media-item"><a href="#">Google Calendar</a></li>
+      </ul>
+    </footer>
+  </main>
 </body>
 
 </html>
