--- a/src/dashboard.html
+++ b/src/dashboard.html
@@ -20,7 +20,7 @@
     </ul>
   </nav>
   <main>
-    <h2>Band dashboard</h2>
+    <h2>User dashboard</h2>
     <section class="band-list-container">
       <ul id="band-list">
         <li><a href="#FlyBy">Fly By Brass Band</a></li>
