--- a/src/index.html
+++ b/src/index.html
@@ -53,24 +53,27 @@
   </header>
   <nav>
     <ul id="navbar">
-      <li class="nav-item"><a href="#home">dashboard</a></li>
-      <li class="nav-item"><a href="#settings">settings</a></li>
+      <li class="nav-item"><a href="#home">Dashboard</a></li>
+      <li class="nav-item"><a href="#settings">Set lists</a></li>
+      <li class="nav-item"><a href="#settings">Members</a></li>
+      <li class="nav-item"><a href="#settings">Media</a></li>
+      <li class="nav-item"><a href="#settings">Repertoire</a></li>
     </ul>
   </nav>
   <main>
     <h2>Fly By Brass Band</h2>
-    <section id="set-list-container">
-
+    <section id="welcome">
+      <p>Fly By has a gig coming up next week! We'll
+        be running through the set list at practice tomorrow;
+        take a look at the set list posted here and let
+        Matt know if you have questions ahead of time, as he is
+        gig captain for the gig.
+        Also, we don't have any good quality images, so check
+        this gem out from the good old days of Boycott!
+      </p>
+      <img id="boycott-img" src="boycotthartford.jpg" />
     </section>
-    <section id="repertoire-container">
 
-    </section>
-    <section id="members-container">
-
-    </section>
-    <section id="media-container">
-
-    </section>
     <footer>
       <!-- use favicons for social media options -->
       <ul id="social-media-list">
