adding resources and set list wireframes

--- a/src/resources.html
+++ b/src/resources.html
@@ -24,21 +24,13 @@
   </nav>
   <main>
     <h2>Fly By Brass Band</h2>
-    <section id="welcome">
-      <p>This is the band's landing page. Announcements, or plain old
-        static welcome/info text can live here, along with a
-        great image of the group. From here, members can navigate
-        using the nav bar above, or the external links below.
-        ----------------------------------------------------------
-        Fly By has a gig coming up next week! We'll
-        be running through the set list at practice tomorrow;
-        take a look at the set list that's posted and let
-        Matt know if you have questions ahead of time, as he is
-        gig captain for the gig.
-        Also, we don't have any good quality images, so check
-        this gem out from the good old days of Boycott!
-      </p>
-      <img id="boycott-img" src="boycotthartford.jpg" />
+    <section id="upload-resources">
+      <!-- upload field and button;  -->
+      <p>Upload images, sheet music (pdf), and images (jpg, png)</p>
+      <button id="upload-button" type="button">Upload</button>
+    </section>
+    <section id="resource-gallery">
+      <!-- gallery of images, audio files, pdfs -->
     </section>
 
     <footer>
